--- a/css/pages/style.css
+++ b/css/pages/style.css
@@ -15,7 +15,7 @@ body {
 
 .wrapper {
     width: 100%;
-    max-width: 1440px;
+    max-width: 1600px;
     margin: 0 auto;
   min-height: 100vh;
     position: relative;
