--- a/css/pages/summary.css
+++ b/css/pages/summary.css
@@ -9,7 +9,7 @@ body{
   width: 100%;
   min-height: 100vh;
   overflow: auto;
-  max-width: 1440px;
+  max-width: 1600px;
 }
 
 /* Sidebar active state */
